Modificacion de menu desplegable parte de registrar

--- a/Modulos/Login/iniciar_sesion.html
+++ b/Modulos/Login/iniciar_sesion.html
@@ -54,8 +54,8 @@
                     </a>
                 </li> -->
                 <li class="sidebar-nav-item">
-                    <a class="js-scroll-trigger" href="../../Modulos/Registrate/formUserRegistrarse.html">
-                        Registrate
+                    <a class="js-scroll-trigger" href="Modulos/Registrate/formUserRegistrarse.html">
+                        ¿Solicitas empleados? Registrate
                     </a>
                 </li>
                 <!-- <li class="sidebar-nav-item">
@@ -103,9 +103,12 @@
                         <a class="link-regreso" href="../../index.html">
                             Volver a job crusade
                         </a>
-                        <a class="link-regreso" href="../../Modulos/Registrate/formUserRegistrarse.html">
-                            -Registrarse
-                        </a>
+                        -
+                        <br>
+                            <a class="link-regreso" href="../../Modulos/Registrate/formUserRegistrarse.html">
+                                ¿Solicitas empleados?  Registrarse
+                            </a>
+                        </br>
                     </div>
                 </div>
             </section>
