--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </li>
                 <li class="sidebar-nav-item">
                     <a class="js-scroll-trigger" href="Modulos/Registrate/formUserRegistrarse.html">
-                        Registrate
+                        ¿Solicitas empleados? Registrate
                     </a>
                 </li>
                 <li class="sidebar-nav-item">
