--- a/Modulos/Registrate/formUserRegistrarse.html
+++ b/Modulos/Registrate/formUserRegistrarse.html
@@ -1,4 +1,4 @@
-<!DOCTYPE  >
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -77,7 +77,7 @@
                         Que encontrar empleo no te cueste sangre
                     </em>
                 </h3>
-                <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">
+                <a class="btn btn-primary btn-xl js-scroll-trigger" href="../Registrate/registroEM.html">
                     Crear cuenta
                 </a>
                 <br>
@@ -127,7 +127,7 @@
                 </h2>
             </div>
             <div class="col-xs-9 col-md-10" id="registro">
-                <form action="" id="registro" method="post" style="text-align: center">
+                <form action="CtrlRegistroEm.php" id="registro" method="post" style="text-align: center">
                     <div class="input-group input-group-sm mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="inputGroup-sizing-sm">
@@ -185,15 +185,15 @@
                     <br>
                         <br>
                             <div class="col-12">
-                                <button class="btn btn-light">
+                                <a class="btn btn-light">
                                     Limpiar
-                                </button>
-                                <button class="btn btn-danger">
+                                </a>
+                                <a class="btn btn-danger">
                                     Cancelar
-                                </button>
-                                <button class="btn btn-warning">
+                                </a>
+                                <a class="btn btn-warning">
                                     Aceptar
-                                </button>
+                                </a>
                                 <br>
                                 </br>
                             </div>
