--- a/Modulos/Registrate/formUserRegistrarse.html
+++ b/Modulos/Registrate/formUserRegistrarse.html
@@ -6,7 +6,7 @@
                 <meta content="" name="description">
                     <meta content="" name="author">
                         <title>
-                            fromUserRegistrarse
+                            Vacante
                         </title>
                         <!-- Bootstrap Core CSS -->
                         <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -77,7 +77,7 @@
                         Que encontrar empleo no te cueste sangre
                     </em>
                 </h3>
-                <a class="btn btn-primary btn-xl js-scroll-trigger" href="../Registrate/registroEM.html">
+                <a class="btn btn-primary btn-xl js-scroll-trigger" href="../Registrate/registroEM.php">
                     Crear cuenta
                 </a>
                 <br>
