Modulo de crear cuenta e inicio de sesión completo

--- a/Modulos/Login/iniciar_sesion.html
+++ b/Modulos/Login/iniciar_sesion.html
@@ -54,7 +54,7 @@
                     </a>
                 </li> -->
                 <li class="sidebar-nav-item">
-                    <a class="js-scroll-trigger" href="../Registrate/formUserRegistrarse.html">
+                    <a class="js-scroll-trigger" href="../Registrate/registroEM.php">
                         ¿Solicitas empleados? Registrate
                     </a>
                 </li>
@@ -103,7 +103,7 @@
                                     </a>
                                     -
                                     <br>
-                                        <a class="link-regreso" href="../Registrate/formUserRegistrarse.html">
+                                        <a class="link-regreso" href="../Registrate/registroEM.php">
                                             ¿Solicitas empleados?  Registrarse
                                         </a>
                                     </br>
