--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </a>
                 </li>
                 <li class="sidebar-nav-item">
-                    <a class="js-scroll-trigger" href="modulos/Registrate/formUserRegistrarse.html">
+                    <a class="js-scroll-trigger" href="modulos/Registrate/registroEM.php">
                         ¿Solicitas empleados? Registrate
                     </a>
                 </li>
